@@ -7,6 +7,7 @@
   * (images) depreciate: image
   * (visibility) depreciate: invisible in favor of hidden
   * (visibility) depreciate: a0-100 in favor of o0-100
+  * (visibility) move display: block, none to grid
 
 * 0.7.4 (2019-02-04)
 
